--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,8 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "ext-bcmath": "*",
-    "ext-json": "*",
-    "illuminate/bus": "^5.7 || ^6.0",
-    "illuminate/events": "^5.7 || ^6.0",
-    "illuminate/http": "^5.7 || ^6.0",
-    "illuminate/queue": "^5.7 || ^6.0",
-    "illuminate/database": "^5.7 || ^6.0",
-    "illuminate/support": "^5.7 || ^6.0",
-    "larva/supports": "^1.2.13"
+    "illuminate/database": "^5.7 || ^6.0 || ^7.0",
+    "illuminate/support": "^5.7 || ^6.0 || ^7.0"
   },
   "autoload": {
     "psr-4": {
